--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "tsx src/index.ts",
     "build": "tsc",
     "dev": "tsx src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "tsx src/server/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,13 @@
   },
   "dependencies": {
     "@hyperbrowser/sdk": "^0.30.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
     "openai": "^4.85.1",
     "zod": "^3.24.2"
   }
